<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountVerificationActivity"
    android:orientation="vertical"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="60dp"
            android:gravity="center_horizontal"
            >

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_store_1"
                android:layout_margin="12dp"
                />


            <TextView
                android:id="@+id/idTextViewShopNameMessageStoreNameActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stringOfShopNameMessage"
                android:textSize="16sp"
                android:layout_margin="12dp"
                android:textColor="#231F20"
                android:gravity="center"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/idEditTextShopNameStoreNameActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/stringOfShopName"
                android:layout_margin="32dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:drawableLeft="@drawable/ic_store_black_24dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/idButtonSubmitStoreNameActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stringOfSubmitButton"
                android:layout_margin="32dp"
                android:textSize="16sp"
                />


        </LinearLayout>

    </ScrollView>

</LinearLayout>