<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="160dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/idImageViewLogoImageMainActivity"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:src="@drawable/logo11"
                    android:layout_gravity="center"
                   />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="bottom">

                <TextView
                    android:id="@+id/idTextViewDigitalMainActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stringOfDigital"
                    android:textSize="24sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_gravity="center"
                    android:textStyle="bold|italic"

                    />

                <TextView
                    android:id="@+id/idTextViewUdhaarMainActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stringOfUdhaar"
                    android:textSize="24sp"
                    android:textColor="#D61A3C"
                    android:layout_gravity="center"
                    android:textStyle="bold|italic"

                    />

                <TextView
                    android:id="@+id/idTextViewKhaataMainActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/stringOfKhata"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    android:textStyle="bold|italic"
                    />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="260dp"
            android:layout_gravity="center">

<!--           <ImageView-->
<!--               android:id="@+id/idImageViewNextImageMainActivity"-->
<!--               android:layout_width="70dp"-->
<!--               android:layout_height="70dp"-->
<!--               android:src="@drawable/ic_arrow"-->
<!--               android:layout_marginBottom="36dp"-->
<!--               />-->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/idButtonNextImageMainActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stringOfGetStarted"
                android:textSize="16sp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="60dp"
                android:textColorHint="@color/design_default_color_primary_dark"
                />


        </LinearLayout>

    </LinearLayout>

</ScrollView>