<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/idCardViewSelectLanguageSelectLanguage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

<!--                Profile-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:layout_marginTop="4dp"
                    >
<!--                    android:foreground="?android:attr/selectableItemBackground"-->
<!--                    android:clickable="true"-->

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_business_black_24dp"/>

                    <TextView
                        android:id="@+id/idTextViewLanguageNameSelectLanguage"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/stringOfProfile"
                        android:textSize="18sp"
                        android:textColor="#000000"
                        android:layout_marginLeft="24dp"
                        android:gravity="center"
                        />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="64dp"
                    android:paddingBottom="16dp"
                    >
                    <!--                    android:foreground="?android:attr/selectableItemBackground"-->
                    <!--                    android:clickable="true"-->

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_store_black_24dp"/>

                    <TextView
                        android:id="@+id/idTextViewShopNameSettingsActivity"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Gautam Stores"
                        android:textSize="16sp"
                        android:textColor="#323232"
                        android:layout_marginLeft="24dp"
                        android:gravity="center"
                        />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="64dp"
                    android:paddingBottom="16dp"
                    android:layout_marginBottom="4dp">
                    <!--                    android:foreground="?android:attr/selectableItemBackground"-->
                    <!--                    android:clickable="true"-->

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_phone_android_black_1_24dp"/>

                    <TextView
                        android:id="@+id/idTextViewMobileNumberSettingsActivity"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="+917517424135"
                        android:textSize="16sp"
                        android:textColor="#323232"
                        android:layout_marginLeft="24dp"
                        android:gravity="center"
                        />


                </LinearLayout>

                <View
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="#000000"
                    />

<!--                Statistics-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:layout_marginTop="4dp"
                    >
                    <!--                    android:foreground="?android:attr/selectableItemBackground"-->
                    <!--                    android:clickable="true"-->

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_business_center_black_24dp"/>

                    <TextView
                        android:id="@+id/idTextViewLanguageNameSelectLanguage"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/stringOfStatistics"
                        android:textSize="18sp"
                        android:textColor="#000000"
                        android:layout_marginLeft="24dp"
                        android:gravity="center"
                        />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="64dp"
                    android:paddingBottom="16dp"
                    >
                    <!--                    android:foreground="?android:attr/selectableItemBackground"-->
                    <!--                    android:clickable="true"-->

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_group_black_24dp"/>

                    <TextView
                        android:id="@+id/idTextViewLanguageNameSelectLanguage"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/stringOfCustomer"
                        android:textSize="16sp"
                        android:textColor="#323232"
                        android:layout_marginLeft="24dp"
                        android:gravity="center"
                        />

                    <TextView
                        android:id="@+id/idTextViewCustomerCountSettingsActivity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="11"
                        android:textSize="16sp"
                        android:layout_marginRight="8dp"
                        android:textColor="@color/colorPrimary"
                        android:gravity="right|center_vertical"
                        />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="64dp"
                    android:paddingBottom="16dp"
                    android:layout_marginBottom="4dp">
                    <!--                    android:foreground="?android:attr/selectableItemBackground"-->
                    <!--                    android:clickable="true"-->

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_account_balance_wallet_black_24dp"/>

                    <TextView
                        android:id="@+id/idTextViewLanguageNameSelectLanguage"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/stringOfBalance"
                        android:textSize="16sp"
                        android:textColor="#323232"
                        android:layout_marginLeft="24dp"
                        android:gravity="center"
                        />

                    <TextView
                        android:id="@+id/idTextViewBalanceSettingsActivity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="464"
                        android:textSize="16sp"
                        android:layout_marginRight="8dp"
                        android:textColor="@color/colorPrimary"
                        android:gravity="right|center_vertical"
                        />

                </LinearLayout>

                <View
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="#000000"
                    />

<!--            Language-->

                <LinearLayout
                    android:id="@+id/idLinearLayoutChangeLanguageSettingsActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:layout_marginTop="8dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true">


                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_language_black_24dp"/>

                    <TextView
                        android:id="@+id/idTextViewLanguageNameSelectLanguage"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/stringOfLanguage"
                        android:textSize="18sp"
                        android:textColor="#323232"
                        android:layout_marginLeft="24dp"
                        android:gravity="center"
                        />

                    <TextView
                        android:id="@+id/idTextViewLanguageSettingsActivity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="English"
                        android:textSize="16sp"
                        android:layout_marginRight="8dp"
                        android:textColor="@color/colorPrimary"
                        android:gravity="right|center_vertical"
                        />


                </LinearLayout>

<!--                sign out-->

                <View
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="#000000"
                    />

                <LinearLayout
                    android:id="@+id/idLinearLayoutSignOutSettingsActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true">



                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_power_sign_out_24dp"/>

                    <TextView
                        android:id="@+id/idTextViewLanguageNameSelectLanguage"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/stringOfSignOut"
                        android:textSize="18sp"
                        android:textColor="#323232"
                        android:layout_marginLeft="24dp"
                        android:gravity="center"
                        />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>



    </LinearLayout>

</LinearLayout>